--- a/css/main.css
+++ b/css/main.css
@@ -17,14 +17,8 @@ html {
   box-sizing: inherit;
 }
 
- body {
-   margin: 0;
-}
-
-header {
-   padding: .5rem 0;
-   background-color: #ccc;
-   text-align: center;
+body {
+  margin: 0;
 }
 
 header {
@@ -34,8 +28,8 @@ header {
 }
 
 h1 {
-margin: 0 0 .5rem
-font-size: 1.5rem;
+  margin: 0 0 .5rem;
+  font-size: 1.5rem;
 }
 
 nav ul {
@@ -44,7 +38,7 @@ nav ul {
   list-style-type: none;
 }
 
-nav  li {
+nav li {
   text-align: left;
 }
 
@@ -72,7 +66,7 @@ nav a:hover {
 @media only screen and (min-width: 38em) {
 
   html {
-    font-size: 110;
+    font-size: 110%;
     line-height: 1.4;
   }
 
@@ -81,14 +75,14 @@ nav a:hover {
 @media only screen and (min-width: 60em) {
 
   html {
-    font-size: 120;
+    font-size: 120%;
     line-height: 1.5;
   }
 
   header {
     padding-left: 1rem;
     padding-right: 1rem;
-    text-align left;
+    text-align: left;
   }
 
   h1,
@@ -107,7 +101,7 @@ nav a:hover {
 @media only screen and (min-width: 90em) {
 
   html {
-    font-size: 130;
+    font-size: 130%;
   }
 
 }
